--- a/src/globals.css
+++ b/src/globals.css
@@ -16,6 +16,7 @@
     --foreground: 240 8% 5%;
     --foreground-muted: 240 8% 45%;
 
+    --scrollbar: 240 10% 82%;
     --border: 240 8% 92%;
     --ring: 240 10% 3.9%;
 
@@ -34,6 +35,7 @@
     --foreground: 240 4% 98%;
     --foreground-muted: 240 4% 55%;
 
+    --scrollbar: 240, 8%, 23%;
     --border: 240 4% 18%;
     --ring: 240 10% 97.9%;
   }
@@ -45,7 +47,7 @@
   }
 
   html {
-    @apply h-full;
+    @apply scrollbar scrollbar-track-transparent scrollbar-thumb-scrollbar h-full;
   }
 
   body {
